; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-joystick.c_InitJoysticks.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-joystick.c_InitJoysticks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SDL_INIT_JOYSTICK = common dso_local global i32 0, align 4
@MAX_JOYSTICKS = common dso_local global i32 0, align 4
@Joysticks = common dso_local global i32* null, align 8
@jinited = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @InitJoysticks() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @SDL_INIT_JOYSTICK, align 4
  %4 = call i32 @SDL_InitSubSystem(i32 %3)
  %5 = call i32 (...) @SDL_NumJoysticks()
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @MAX_JOYSTICKS, align 4
  %8 = icmp sgt i32 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %0
  %10 = load i32, i32* @MAX_JOYSTICKS, align 4
  store i32 %10, i32* %2, align 4
  br label %11

11:                                               ; preds = %9, %0
  store i32 0, i32* %1, align 4
  br label %12

12:                                               ; preds = %23, %11
  %13 = load i32, i32* %1, align 4
  %14 = load i32, i32* %2, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %26

16:                                               ; preds = %12
  %17 = load i32, i32* %1, align 4
  %18 = call i32 @SDL_JoystickOpen(i32 %17)
  %19 = load i32*, i32** @Joysticks, align 8
  %20 = load i32, i32* %1, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  store i32 %18, i32* %22, align 4
  br label %23

23:                                               ; preds = %16
  %24 = load i32, i32* %1, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %1, align 4
  br label %12

26:                                               ; preds = %12
  store i32 1, i32* @jinited, align 4
  ret i32 1
}

declare dso_local i32 @SDL_InitSubSystem(i32) #1

declare dso_local i32 @SDL_NumJoysticks(...) #1

declare dso_local i32 @SDL_JoystickOpen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
